--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,76 +1,107 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  
-  .title {
-    text-align: center;
-    margin-bottom: 1rem;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 150vh;
+}
 
-  .formBox {
-    width: 300px;
-    margin: 10px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 100px;
-  }
-  
-  .inputContainer {
-    display: grid;
-    grid-template-columns: 150px auto;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  
-  .label {
-    width: 150px;
-    margin-right: 10px;
-  }
-
-  .buttonContainer {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 10px;
-  }
+.title {
+  text-align: center;
+  margin-bottom: 5rem;
+}
 
 
-  .contentWrapper {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  
-  .box {
-    flex-basis: 45%; /* Adjust the width of the boxes as needed */
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 4px;
-  }
-  
-  .box + .box {
-    margin-left: 50px; /* Set the desired gap between the boxes */
-  }
+/*------------------CHECK IN BOX------------------ */
 
-  .locationInfo {
-    /* Additional styles for location info */
-  }
-  
-  .contactInfo {
-    /* Additional styles for contact info */
-  }
-  
+.formBox {
+  flex-basis: 10%;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 4px;
+  margin-bottom: 100px;
+}
 
-  
+.form {
+  display: grid;
+  grid-template-columns: max-content max-content max-content;
+  grid-gap: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  padding-right: 25px;
+
+}
+
+.buttonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 0px;
+  grid-column: 3; 
+}
+
+.buttonContainer button {
+  padding: 15px  25px;
+  background-color: green;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.buttonContainer button:hover {
+  background-color: rgb(10, 150, 10);
+}
+
+
+.label {
+  margin-bottom: 10px;
+}
+
+
+.inputWrapper {
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  width: 150px;
+  padding: 10px;
+}
+
+
+
+/*------------------CONTENT BOX------------------ */
+
+.contentWrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.box {
+  flex-basis: 45%;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.box + .box {
+  margin-left: 50px;
+}
+
+.locationInfo {
+  /* Additional styles for location info */
+}
+
+.contactInfo {
+  /* Additional styles for contact info */
+}
