--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -3,12 +3,32 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 150vh;
+  margin-top: 100px;
+}
+
+.background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /*background-image: url("/img/home.jpg");*/
+  background-position: center top; 
+  background-repeat: no-repeat; 
+  background-size: 100% 50%;
 }
 
 .title {
   text-align: center;
-  margin-bottom: 5rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 45px;
+}
+
+.slogan {
+  text-align: center;
+  margin-top: -1rem;
+  margin-bottom: 10rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 20px; 
 }
 
 
@@ -17,8 +37,10 @@
 .formBox {
   flex-basis: 10%;
   border: 1px solid #ccc;
+  background-color: white;  
   padding: 20px;
   border-radius: 4px;
+  margin-top: 10px;
   margin-bottom: 100px;
 }
 
@@ -63,6 +85,8 @@
 
 
 .label {
+  font-family: 'Playfair Display', serif;
+  font-size: 18px;
   margin-bottom: 10px;
 }
 
@@ -88,10 +112,14 @@
 }
 
 .box {
+  text-align: center;
   flex-basis: 45%;
   border: 1px solid #ccc;
+  background-color: #f5f5f5;
   padding: 20px;
   border-radius: 4px;
+  font-family: 'Playfair Display', serif;
+  font-size: 20px; 
 }
 
 .box + .box {
