--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -10,25 +10,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  /*background-image: url("/img/home.jpg");*/
-  background-position: center top; 
-  background-repeat: no-repeat; 
-  background-size: 100% 50%;
+  background-image: url("/img/home.jpg");
+  background-position: center center; 
+  background-repeat: no-repeat;
+  background-size: cover; 
+  margin-top: -80px;
+  height: 50vh; 
+  width: 80%;
 }
+
 
 .title {
   text-align: center;
   font-family: 'Playfair Display', serif;
   font-size: 45px;
+  margin-top: 12rem;
+  color: white;
+  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.1), 1px -1px 2px rgba(0, 0, 0, 0.1),
+   -1px 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 .slogan {
   text-align: center;
   margin-top: -1rem;
   margin-bottom: 10rem;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px; 
+  color:white;
+  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.1), 1px -1px 2px rgba(0, 0, 0, 0.1),
+   -1px 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 
@@ -40,7 +52,7 @@
   background-color: white;  
   padding: 20px;
   border-radius: 4px;
-  margin-top: 10px;
+  margin-top: -75px;
   margin-bottom: 100px;
 }
 
@@ -77,6 +89,8 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: 'Playfair Display', serif;
+  font-size: 15px;
 }
 
 .buttonContainer button:hover {
@@ -85,7 +99,7 @@
 
 
 .label {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   margin-bottom: 10px;
 }
@@ -115,15 +129,16 @@
   text-align: center;
   flex-basis: 45%;
   border: 1px solid #ccc;
-  background-color: #f5f5f5;
-  padding: 20px;
+  padding: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
   border-radius: 4px;
   font-family: 'Playfair Display', serif;
   font-size: 20px; 
 }
 
 .box + .box {
-  margin-left: 50px;
+  margin-left: 150px;
 }
 
 .locationInfo {
