--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,14 +1,24 @@
  @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+.container {
+    background-image: linear-gradient(145deg, #43cea2, #185a9d);
+}
+    .background {
+        background-image: url("/img/about-us-img.jpg");
+    }
+
  .aboutTitle {
     text-align: center;
     padding-top: 50px;
     font-family: 'Playfair Display', serif;
+    font-size: 18px;
  }
 .aboutus {
     text-align: center;
     padding: 10px 250px 60px;
     margin: 0 auto;
     font-family: 'Jost', sans-serif;
+    line-height: 20px;
+    font-size: 18px;
 }
