--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -4,9 +4,17 @@
 .container {
     background-image: linear-gradient(145deg, #43cea2, #185a9d);
 }
-    .background {
-        background-image: url("/img/about-us-img.jpg");
-    }
+
+.aboutImage {
+    display:flex;
+    padding-top: 660px;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    max-width: 100%;
+    max-height: 500px;
+
+}
 
  .aboutTitle {
     text-align: center;
