--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -2,7 +2,7 @@
  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
 .container {
-    background-image: linear-gradient(145deg, #43cea2, #185a9d);
+    background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
 }
 
 .aboutImage {
