--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -7,26 +7,32 @@
 
 .aboutImage {
     display:flex;
-    padding-top: 660px;
-    object-fit: cover;
-    object-position: center;
-    position: absolute;
-    max-width: 100%;
-    max-height: 500px;
+    display: -webkit-box;
+    margin-left: auto;
+    margin-top: 7%;
+    object-fit: contain;
+    max-width: 60%;
+    max-height: 60%;
 
 }
 
  .aboutTitle {
-    text-align: center;
+    display: flex;
+    text-align: left;
     padding-top: 50px;
+    padding-left: 40px;
     font-family: 'Playfair Display', serif;
-    font-size: 18px;
+    font-size: 1vw;
  }
 .aboutus {
-    text-align: center;
-    padding: 10px 250px 60px;
+    display: flex;
+    text-align: left;
+    text-justify: right;
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-block-end: 7%;
     margin: 0 auto;
     font-family: 'Jost', sans-serif;
-    line-height: 20px;
-    font-size: 18px;
+    line-height: 1vw;
+    font-size: 1vw;
 }
