--- a/styles/reservation.module.css
+++ b/styles/reservation.module.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+
 .container {
-    background-image: radial-gradient( circle 369px at -2.9% 12.9%,  rgba(247,234,163,1) 0%, rgba(236,180,238,0.56) 46.4%, rgba(163,203,247,1) 100.7% );
+    background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
+}
+
+.container h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2vw;
+    text-align: center;
+    padding-top: 3%;
+}
+
+.container p {
+    font-family: 'Jost', sans-serif;
+    font-size: 1vw;
+    padding-left: 3%;
+}
+
+.text {
+    text-align: center;
+    padding-block-start: 10px;
+    padding-block-end: 2%;
+}
+
+.roomGrid {
+    margin: auto;
+    
 }
