--- a/styles/reservation.module.css
+++ b/styles/reservation.module.css
@@ -14,7 +14,7 @@
 
 .container p {
     font-family: 'Jost', sans-serif;
-    font-size: 1vw;
+    font-size: 10-px;
     padding-left: 3%;
 }
 
@@ -30,3 +30,9 @@
     padding-top: 2%;
     padding-bottom: 10%;
 }
+
+.roomContainer img{
+    width: 300px;
+    height: auto;
+  }
+  
