--- a/styles/reservation.module.css
+++ b/styles/reservation.module.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
-.container {
+/* .container {
     background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
-}
+} */
 
 .container h1 {
     font-family: 'Playfair Display', serif;
@@ -31,8 +31,84 @@
     padding-bottom: 10%;
 }
 
-.roomContainer img{
-    width: 300px;
-    height: auto;
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+
+  
+  .text {
+    margin-bottom: 20px;
+  }
+  
+  .dates {
+    margin-bottom: 20px;
+  }
+  
+  .roomContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+  
+  .size {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+  
+  
+  .price {
+    font-weight: bold;
+  }
+  
+  .roomGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+  
+  .smallRooms {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .mediumRooms {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .largeRooms {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .reserveButton {
+    font-family: 'Jost', sans-serif;
+    background-color: #5c5b5b;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .reserveButton:hover {
+    background-color: #a8a8a7;
   }
   
