--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -2,26 +2,35 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    text-align: center;
   }
   
-  .signout {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+  .signout, .cancle {
+    padding: 10px;
+    background-color: #5c5b5b;
+    color: #ffffff;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-family: 'Jost', sans-serif;
   }
   
-  .signout:hover {
-    background-color: #0056b3;
+  .signout:hover, .cancle:hover{
+    background-color: #a8a8a7;
   }
   
 
   .reservationBox {
+    text-align: center;
     border: 1px solid #ccc;
     padding: 20px;
     margin-bottom: 20px;
     list-style-type: none;
   }
+  
+  .userProfile h4{
+    font-family: 'Jost', sans-serif;
+    text-align: center;
+  }
+
   
