--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -3,13 +3,14 @@
 
 .container {
     background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
+    padding-bottom: 10%;
 }
 
 .aboutImage {
     display:flex;
     display: -webkit-box;
-    margin-left: auto;
-    margin-top: 7%;
+    margin-left: 45%;
+    margin-top: 12%;
     object-fit: contain;
     max-width: 60%;
     max-height: 60%;
@@ -19,8 +20,8 @@
  .aboutTitle {
     display: flex;
     text-align: left;
-    padding-top: 50px;
-    padding-left: 40px;
+    padding-top: 130px;
+    padding-left: 70px;
     font-family: 'Playfair Display', serif;
     font-size: 1vw;
  }
@@ -29,7 +30,7 @@
     text-align: left;
     text-justify: right;
     padding-top: 10px;
-    padding-left: 40px;
+    padding-left: 70px;
     padding-block-end: 7%;
     margin: 0 auto;
     font-family: 'Jost', sans-serif;
