fixed create account error, improved UI

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -27,7 +27,7 @@
   }
   
   .formContainer button.button {
-    width: 100%;
+    width: 150px;
     padding: 10px;
     background-color: #5c5b5b;
     color: #ffffff;
