--- a/styles/reservation.module.css
+++ b/styles/reservation.module.css
@@ -1,9 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
-/* .container {
-    background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% );
-} */
+.background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("/img/beach.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 80% auto; /* Set the width to 80% and maintain the aspect ratio */
+  margin-top: 0;
+  height: 30vh;
+  width: 100%;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  width: 80%; /* Set the width of the container to 80% */
+}
+
+.reservationTitle { 
+  color: white;
+  font-family: 'Playfair Display', serif;
+  font-size: 20px;
+}
 
 .container h1 {
     font-family: 'Playfair Display', serif;
@@ -53,12 +76,13 @@
     gap: 20px;
   }
   
-  .size {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+.size {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
   
   .img {
     width: 100%;
@@ -73,11 +97,10 @@
     font-weight: bold;
   }
   
-  .roomGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
+.roomContainer {
+  display: block;
+  margin-top: 20px;
+}
   
   .smallRooms {
     display: flex;
