--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;400&family=Playfair+Display:wght@500&display=swap');
+
+.gradient {
+  background-image: linear-gradient( 45.5deg,  rgba(137,169,158,1) 4.7%, rgba(165,190,169,1) 45.3%, rgba(242,242,242,1) 94.6% );
+  padding-bottom: 5%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
   margin-bottom: 150px;
 }
 
@@ -15,7 +21,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: -80px;
+  margin-top: 0 auto;
   height: 50vh;
   width: 80%;
 }
@@ -24,8 +30,8 @@
 .title {
   text-align: center;
   font-family: 'Playfair Display', serif;
-  font-size: 45px;
-  margin-top: 12rem;
+  font-size: 70px;
+  margin-top: 10rem;
   color: white;
   text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.1), 1px -1px 2px rgba(0, 0, 0, 0.1),
    -1px 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -34,10 +40,10 @@
 
 .slogan {
   text-align: center;
-  margin-top: -1rem;
+  margin-top: -3rem;
   margin-bottom: 10rem;
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-family: 'Jost', sans-serif;
+  font-size: 25px;
   color:white;
   text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.1), 1px -1px 2px rgba(0, 0, 0, 0.1),
    -1px 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -53,8 +59,11 @@
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 4px;
-  margin-top: -100px;
+  margin-top: 80px;
   margin-bottom: 100px;
+  font-family: 'Jost', sans-serif;
+  font-size: 18px;
+  
 }
 
 .form {
@@ -99,7 +108,7 @@
 }
 
 .label {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 18px;
   margin-bottom: 10px;
 }
@@ -146,7 +155,6 @@
   /* Additional styles for location info */
   margin-bottom: 20px;
   border: 1px solid #ccc;
-
 }
 
 .contactInfo {
@@ -155,7 +163,7 @@
 }
 
 .description {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Jost', sans-serif;
   color: #666;
   font-size: 14px;
   margin-top: -20px;
