--- a/styles/reservation.module.css
+++ b/styles/reservation.module.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+.gradient {
+  background-image: linear-gradient( 105.5deg,  rgba(228,247,255,1) 21.9%, rgba(255,216,194,1) 92.2% );
+}
+
 .background {
   display: flex;
   flex-direction: column;
