--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
 .adminBack {
-  background-image: linear-gradient( 359.8deg,  rgba(207,217,223,1) 3.9%, rgba(226,235,240,1) 94% );
+  background-image: linear-gradient( 45deg,  rgba(167,220,225,1) 11.2%, rgba(217,239,242,1) 88.9% );
   padding-bottom: 5%;
 }
 
@@ -21,11 +21,32 @@
   font-family: 'Jost', sans-serif;
 }
 
+  .makeReq {
+    font-family: 'Playfair Display', serif;
+  }
+
+  .currInv {
+    font-family: 'Playfair Display', serif;
+  }
+
+  .updateRoom {
+    font-family: 'Playfair Display', serif;
+  }
+
+  .currPrice {
+    font-family: 'Playfair Display', serif;
+  }
+
+  .updatePrice {
+    font-family: 'Playfair Display', serif;
+  }
+
 .container input {
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-family: 'Jost', sans-serif;
 }
 
 .container input[type=radio] {
@@ -51,9 +72,38 @@
   border-radius: 4px;
   cursor: pointer;
   font-family: 'Playfair Display', serif;
-
 }
 
 .container button.button:hover {
   background-color: #a8a8a7;
 }
+
+.containertwo {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  /* background-color: #f5f5f5; */
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 4px;
+  font-family: 'Jost', sans-serif;
+}
+
+.MaintButton {
+  width: 191px;;
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: #5c5b5b;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Playfair Display', serif;
+}
+  .titleline {
+    font-family: 'Playfair Display', serif;
+  }
