--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+.login {
+  background-image: linear-gradient( 75deg,  rgba(245,212,212,1) 8.5%, rgba(252,251,224,1) 90.2% );
+}
+
 .formContainer {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +14,7 @@
     padding: 20px;
     /* background-color: #f5f5f5; */
     border-radius: 4px;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
   
   .formContainer h3 {
@@ -24,6 +27,7 @@
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    font-family: 'Jost', sans-serif;
   }
   
   .formContainer button.button {
@@ -34,7 +38,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Playfair Display', serif;
 
   }
   
