--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -4,6 +4,7 @@
 .adminBack {
   background-image: linear-gradient( 45deg,  rgba(167,220,225,1) 11.2%, rgba(217,239,242,1) 88.9% );
   padding-bottom: 5%;
+  padding-top: 10px;
 }
 
 .container {
