--- a/styles/ResBooked.module.css
+++ b/styles/ResBooked.module.css
@@ -1,21 +1,13 @@
-.container {
+.background {
+  background-image: linear-gradient( 89.9deg,  rgba(208,246,255,1) 0.1%, rgba(255,237,237,1) 47.9%, rgba(255,255,231,1) 100.2% );
+}
+
+.success {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   flex-direction: column;
-}
-
-.heading {
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.message {
-  font-size: 16px;
-  color: #666;
-  text-align: center;
 }
 
 
