--- a/styles/ResBooked.module.css
+++ b/styles/ResBooked.module.css
@@ -1,17 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+
 .background {
   background-image: linear-gradient( 89.9deg,  rgba(208,246,255,1) 0.1%, rgba(255,237,237,1) 47.9%, rgba(255,255,231,1) 100.2% );
+  padding-bottom: 10%;
 }
 
 .success {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   flex-direction: column;
+  font-family: 'Jost', sans-serif;
 }
 
+  .confirmed {
+    font-family: 'Playfair Display', serif;
+  }
 
 .confirm {
-  width: 100px;
-  height: auto;
+  height: 15vh;
+  padding-top: 10%;
 }
+
