--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -1,8 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+
+.background {
+  background-image: linear-gradient( 100deg,  rgba(141,190,134,1) 13.6%, rgba(230,251,198,1) 65.3%, rgba(255,255,255,1) 108.8% );
+}
+
 .userProfile {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+    font-family: 'Jost', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+  .welcome {
+    font-family: 'Playfair Display', serif;
+  }
+
+  .prof {
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    margin-top: 15%;
   }
   
   .signout, .cancle {
@@ -12,25 +33,29 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: 'Jost', sans-serif;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 30px;
   }
   
   .signout:hover, .cancle:hover{
     background-color: #a8a8a7;
+    align-items: center;
   }
   
-
   .reservationBox {
     text-align: center;
-    border: 1px solid #ccc;
-    padding: 20px;
     margin-bottom: 20px;
     list-style-type: none;
+    align-items: center;
   }
   
-  .userProfile h4{
-    font-family: 'Jost', sans-serif;
+  .res {
+    font-family: 'Playfair Display', serif;
     text-align: center;
+    margin-top: 15%;
   }
-
   
+  .goback {
+    font-family: 'Jost', sans-serif;
+    padding-top: 10%;
+  }
