--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -25,7 +25,7 @@
     text-align: center;
     margin-top: 15%;
   }
-  
+
   .signout, .cancle {
     padding: 10px;
     background-color: #5c5b5b;
@@ -36,25 +36,26 @@
     font-family: 'Playfair Display', serif;
     margin-bottom: 30px;
   }
-  
+
   .signout:hover, .cancle:hover{
     background-color: #a8a8a7;
     align-items: center;
   }
-  
+
   .reservationBox {
     text-align: center;
     margin-bottom: 20px;
+    margin-right: 40px;
     list-style-type: none;
     align-items: center;
   }
-  
+
   .res {
     font-family: 'Playfair Display', serif;
     text-align: center;
     margin-top: 15%;
   }
-  
+
   .goback {
     font-family: 'Jost', sans-serif;
     padding-top: 10%;
