profile styling form
Just tried to match the styling to some of the other pages. also was hard to read without a clear solid background

--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -16,6 +16,12 @@
     align-items: center;
 }
 
+.userForm {
+  margin:20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
   .welcome {
     font-family: 'Playfair Display', serif;
   }
