--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -1,67 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
-.checkoutback {
+.background {
     background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
-    padding-bottom: 10%;
     padding-top: 10px;
+    padding-bottom: 10%;
 }
 
-.container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #ccc;
-    background-color: white;
-    border-radius: 4px;
-    width: 600px;
-    margin: 20px auto;
-    font-family: 'Jost', sans-serif;
-}
-
-    .resInfo {
+    .accept {
         font-family: 'Playfair Display', serif;
+        text-align: center;
     }
 
-    .cardInfo {
-        font-family: 'Playfair Display', serif;
+    .container {
+        font-family: 'Jost', sans-serif;
+        text-align: center;
+        padding: 5%;
     }
 
-    .success {
+    .payButton {
+        width: 191px;;
+        padding: 10px;
+        margin-bottom: 15px;
+        background-color: #5c5b5b;
+        color: #ffffff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
         font-family: 'Playfair Display', serif;
+        margin-top: 5%;
     }
 
-.container input {
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-family: 'Jost', sans-serif;
-}
+    .payButton:hover {
+        background-color: #a8a8a7;
+      }
 
-.button {
-    width: 191px;;
-    padding: 10px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    background-color: #5c5b5b;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Playfair Display', serif;
-}
+    .cartTotal input {
+        margin-bottom: 2%;
+        font-family: 'Jost', sans-serif;
+        padding: 5px
+    }
 
-.confirm {
-    width: 191px;;
-    padding: 10px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    background-color: #5c5b5b;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Playfair Display', serif;
-}
+    .mail input {
+        font-family: 'Jost', sans-serif;
+        padding: 5px;
+    }
 
