--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -2,47 +2,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
 .login {
-  background-image: linear-gradient( 75deg,  rgba(245,212,212,1) 8.5%, rgba(252,251,224,1) 90.2% );
+  background-image: linear-gradient(75deg, rgba(245, 212, 212, 1) 8.5%, rgba(252, 251, 224, 1) 90.2%);
+  padding-top: 10vh;
+  padding-bottom: 50vh;
 }
 
-.formContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    /* background-color: #f5f5f5; */
-    border-radius: 4px;
-    font-family: 'Playfair Display', serif;
-  }
-  
-  .formContainer h3 {
-    margin-bottom: 20px;
-  }
-  
-  .formContainer input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-family: 'Jost', sans-serif;
-  }
-  
-  .formContainer button.button {
-    width: 150px;
-    padding: 10px;
-    background-color: #5c5b5b;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Playfair Display', serif;
 
-  }
-  
-  .formContainer button.button:hover {
-    background-color: #a8a8a7;
-  }
-  
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 4px;
+  font-family: 'Playfair Display', serif;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  background-color: white;
+}
+
+.formContainer h3 {
+  margin-bottom: 20px;
+}
+
+.formContainer input {
+  background-color: #f5f5f5;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: 'Jost', sans-serif;
+}
+
+.buttonContainer button:hover {
+  background-color: #a8a8a7;
+}
+
+.formContainer button.button {
+  width: 150px;
+  padding: 10px;
+  background-color: #5c5b5b;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Playfair Display', serif;
+}
+
+.formContainer button.button:hover {
+  background-color: #a8a8a7;
+}
+
+.formToggle {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formToggle button {
+  width: 220px;
+  padding: 10px;
+  background-color: #5c5b5b;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Playfair Display', serif;
+}
+
+.formToggle button:hover {
+  background-color: #a8a8a7;
+}
+
+.formToggle .formContainer {
+  border: 1px solid #ccc;
+  margin-top: 10px;
+  padding: 20px;
+}
