Added style for Slideshow

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -17,14 +17,50 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("/img/home.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 0 auto;
   height: 50vh;
   width: 80%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  animation: changeBackground 48s infinite; /* Adjust the animation duration to match the desired run time */
 }
+
+@keyframes changeBackground {
+  0% {
+    background-image: url("/img/home.jpg");
+  }
+  14.285% {
+    background-image: url("/img/home.jpg");
+  }
+  21.428% {
+    background-image: url("/img/deluxe.jpg");
+  }
+  35.714% {
+    background-image: url("/img/deluxe.jpg");
+  }
+  42.857% {
+    background-image: url("/img/beach.jpg");
+  }
+  57.142% {
+    background-image: url("/img/beach.jpg");
+  }
+  64.285% {
+    background-image: url("/img/view.jpg");
+  }
+  78.571% {
+    background-image: url("/img/view.jpg");
+  }
+  85.714% {
+    background-image: url("/img/Deck.jpg");
+  }
+  100% {
+    background-image: url("/img/Deck.jpg");
+  }
+}
+
+
 
 
 .title {
@@ -33,8 +69,8 @@
   font-size: 70px;
   margin-top: 10rem;
   color: white;
-  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.1), 1px -1px 2px rgba(0, 0, 0, 0.1),
-   -1px 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 2px rgba(0, 0, 0, 0.1);
+  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.2), 1px -1px 2px rgba(0, 0, 0, 0.2),
+   -1px 1px 2px rgba(0, 0, 0, 0.2), 1px 1px 2px rgba(0, 0, 0, 0.2);
 
 }
 
@@ -63,7 +99,7 @@
   margin-bottom: 100px;
   font-family: 'Jost', sans-serif;
   font-size: 18px;
-  
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .form {
@@ -144,6 +180,7 @@
   border-radius: 4px;
   font-family: 'Playfair Display', serif;
   font-size: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .box + .box {
