--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+/*This file contains the styling for the About Us page's layout and visual
+presentations. Including headers, forms, links, buttons, etc.*/
+
 .container {
     background-image: linear-gradient(58.2deg, rgba(40, 91, 212, 0.73) -3%, rgba(171, 53, 163, 0.45) 49.3%, rgba(255, 204, 112, 0.37) 97.7%);
-    padding-bottom: 50vh; 
-    background-position: center bottom; 
+    padding-bottom: 50vh;
+    background-position: center bottom;
   }
 
 .aboutImage {
@@ -27,8 +30,8 @@
 
 .aboutus {
     display: flex;
-    flex-direction: column; 
-    align-items: flex-start; 
+    flex-direction: column;
+    align-items: flex-start;
     padding-top: 10px;
     padding-left: 70px;
     padding-bottom: 7%;
@@ -56,13 +59,13 @@
         max-height: 80%;
         margin-top: 650px; /* Add margin-top to move the image lower */
       }
-  
+
     .aboutTitle {
       padding-top: 60px;
       padding-left: 30px;
       font-size: 2vw;
     }
-  
+
     .aboutus {
       padding: 3vh 20px;
       padding-bottom: 30%;
