CSS File Comment Descriptions
commented descriptions for each

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,3 +1,6 @@
+/*This file contains the styling for the NavBar's layout and visual
+presentations. To be at the bottom of every page.*/
+
 .container{
   background-color: #f5f5f5;
   padding: 10px;
