--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+/*This file contains the styling for the admin page's layout and visual
+presentations. Including headers, forms, links, buttons, etc.*/
+
 .adminBack {
   background-image: linear-gradient( 45deg,  rgba(167,220,225,1) 11.2%, rgba(217,239,242,1) 88.9% );
   padding-bottom: 5%;
