--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+/*This file contains the styling for the Login page's layout and visual
+presentations. Including headers, forms, links, buttons, etc.*/
+
 .login {
   background-image: linear-gradient(75deg, rgba(245, 212, 212, 1) 8.5%, rgba(252, 251, 224, 1) 90.2%);
   padding-top: 10vh;
