--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -1,3 +1,6 @@
+/*This file contains the styling for the NavBar's layout and visual
+presentations. To be at the top of every page.*/
+
 .navBar {
   background-color: #f5f5f5;
   padding: 10px;
