--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+/*This file contains the styling for the User Profile page's layout and visual
+presentations. Including headers, forms, links, buttons, etc.*/
+
 .background {
     background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
     padding-top: 10px;
@@ -45,4 +48,3 @@
         font-family: 'Jost', sans-serif;
         padding: 5px;
     }
-
