--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+/*This file contains the styling for the User Profile page's layout and visual
+presentations. Including headers, forms, links, buttons, etc.*/
+
 .background {
   background-image: linear-gradient( 100deg,  rgba(141,190,134,1) 13.6%, rgba(230,251,198,1) 65.3%, rgba(255,255,255,1) 108.8% );
 }
