--- a/styles/ResBooked.module.css
+++ b/styles/ResBooked.module.css
@@ -1,11 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
+
+
+/**
+ * Styles for the background of the website.
+ * Uses a linear gradient background.
+ */
 .background {
   background-image: linear-gradient( 89.9deg,  rgba(208,246,255,1) 0.1%, rgba(255,237,237,1) 47.9%, rgba(255,255,231,1) 100.2% );
   padding-bottom: 10%;
 }
 
+
+/**
+ * Styles for success messages.
+ * Aligns the content in the center vertically and horizontally.
+ * Uses the 'Jost' font for the text.
+ */
 .success {
   display: flex;
   justify-content: center;
@@ -14,10 +26,20 @@
   font-family: 'Jost', sans-serif;
 }
 
+
+/**
+ * Styles for confirmed success messages.
+ * Uses the 'Playfair Display' font for the text.
+ */
   .confirmed {
     font-family: 'Playfair Display', serif;
   }
 
+
+/**
+ * Styles for the confirmation section.
+ * Sets the height and padding of the confirmation element.
+ */
 .confirm {
   height: 15vh;
   padding-top: 10%;
